hphp/hack/test/typecheck/generic_primitive_option_arg.php.like_types.exp
File "generic_primitive_option_arg.php", line 6, characters 5-6:
Invalid argument (Typing[4110])
File "generic_primitive_option_arg.php", line 3, characters 12-15:
Expected ?int
File "generic_primitive_option_arg.php", line 5, characters 22-22:
But got T
